tests/compile_fail/remove_edge_to_new_target.rs
use grw::modify::*;

fn main() {
    let _ = !e() >> N(2);
}
